# mcl

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  gitignore  package.xml  simulator.launch
mir_mcl/: CHANGELOG.rst  CMakeLists.txt  package.xml  plugin_description.xml
mir_mcl/config/: config.rviz
mir_mcl/launch/: intelligence.launch  move_base.launch  rviz.launch  simulation.launch
mir_mcl/maps/: maze.json
mir_mcl/models/reflector/: model.config  model.sdf
mir_mcl/worlds/: maze.world  maze.yaml
ruvu_laser_reflector_filter/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
ruvu_laser_reflector_filter/cfg/: ReflectorFilter.cfg
ruvu_laser_reflector_filter/scripts/: intensity_vs_distance  sick_extended_data_extractor  sick_extended_data_visualization
ruvu_laser_reflector_filter/src/: euclidean_clustering.cpp  euclidean_clustering.hpp  intensity_filter.cpp
ruvu_mcl/: BENCHMARK.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  rosdoc.yaml
ruvu_mcl/cfg/: AMCL.cfg
ruvu_mcl/scripts/: add_map_to_rosbag  plot_benchmark_results  plot_sensor_model_statistics
ruvu_mcl/src/: cloud_publisher.cpp  cloud_publisher.hpp  config.cpp  config.hpp  filter.cpp  filter.hpp  forward_sim.hpp  main.cpp  map.cpp  map.hpp  mcl.cpp  mcl.hpp  mcl_ros.cpp  mcl_ros.hpp  node.cpp  node.hpp  offline.cpp  particle_filter.cpp  particle_filter.hpp  rng.cpp  rng.hpp  split_and_merge.cpp  split_and_merge.hpp  svol_bs.hpp
ruvu_mcl/src/adaptive/: adaptive_method.hpp  fixed.cpp  fixed.hpp  kld_sampling.cpp  kld_sampling.hpp  split_and_merge.cpp  split_and_merge.hpp  utils.cpp  utils.hpp
ruvu_mcl/src/motion_models/: differential_motion_model.cpp  differential_motion_model.hpp  motion_model.cpp  motion_model.hpp
ruvu_mcl/src/offline/: bag_buffer.cpp  bag_buffer.hpp  bag_player.cpp  bag_player.hpp
ruvu_mcl/src/resamplers/: low_variance.cpp  low_variance.hpp  resampler.cpp  resampler.hpp
ruvu_mcl/src/sensor_models/: beam_model.cpp  beam_model.hpp  gaussian_landmark_model.cpp  gaussian_landmark_model.hpp  landmark.cpp  landmark.hpp  landmark_likelihood_field_model.cpp  landmark_likelihood_field_model.hpp  laser.cpp  laser.hpp  likelihood_field_model.cpp  likelihood_field_model.hpp
ruvu_mcl/test/: benchmark_gaussian_landmark_model.cpp  large_landmark_map.bag  large_landmark_map.bag.json  plot_adaptive.cpp  plot_motion_models.cpp  plot_resampling.cpp  plot_resampling_BACKUP_56222.cpp  plot_resampling_REMOTE_55946.cpp  regression_test_large_landmark_map.cpp  render_scan.cpp  test_adaptive_utils.cpp  test_differential_motion_model.cpp  test_distance_map.cpp  test_gaussian_landmark_model.cpp  test_map.cpp  test_occupancy_map.cpp  test_particle_filter.cpp  test_split_and_merge.cpp
ruvu_mcl_landmark_server/: CHANGELOG.rst  CMakeLists.txt  package.xml
ruvu_mcl_landmark_server/src/: filesystem.hpp  generate_random_map.cpp  interactive_markers.cpp  interactive_markers.hpp  json_utils.hpp  landmark.hpp  main.cpp
ruvu_mcl_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
ruvu_mcl_msgs/msg/: LandmarkEntry.msg  LandmarkList.msg  ParticleStatistics.msg
ruvu_mcl_msgs/srv/: AddLandmark.srv
ruvu_mcl_rviz_plugins/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  plugin_description.xml
ruvu_mcl_rviz_plugins/src/: add_landmark_tool.cpp  add_landmark_tool.hpp  landmark_display.cpp  landmark_display.hpp
src/: forward_sim.cpp  gps.cpp  main.cpp  particle_filter.cpp  particle_filter.hpp  plot.cpp
src/motion_models/: differential_motion_model.cpp  differential_motion_model.hpp  motion_model.hpp
test/: test_differential_motion_model.cpp
turtlebot3_mcl/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_mcl/launch/: rviz.launch  simulator.launch
turtlebot3_mcl/param/: config.rviz
