<?xml version="1.0"?>
<!--
Copyright 2021 RUVU Robotics B.V.
-->

<package format="2">
  <name>mir_mcl</name>
  <version>0.0.0</version>
  <description>Demonstrates ruvu_mcl running on a MIR in simulation.</description>

  <maintainer email="ramon@ruvu.nl">Ramon Wijnands</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>ruvu_gazebo_plugins</exec_depend>

  <test_depend>ruvu_lint</test_depend>
</package>
