<?xml version="1.0"?>
<!--
Copyright 2021 RUVU Robotics B.V.
-->

<package format="2">
  <name>mir_mcl</name>
  <version>1.0.0</version>
  <description>Demonstrates ruvu_mcl running on a MIR in simulation.</description>

  <maintainer email="paul@ruvu.nl">Paul Verhoeckx</maintainer>
  <maintainer email="ramon@ruvu.nl">Ramon Wijnands</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>mir_description</exec_depend>
  <exec_depend>mir_gazebo</exec_depend>
  <exec_depend>mir_navigation</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ruvu_gazebo_plugins</exec_depend>
  <exec_depend>ruvu_mcl</exec_depend>
  <exec_depend>ruvu_mcl_landmark_server</exec_depend>
  <exec_depend>ruvu_mcl_rviz_plugins</exec_depend>
  <exec_depend>ruvu_rviz_plugins</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>topic_tools</exec_depend>

  <test_depend>ruvu_lint</test_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>

</package>
