<?xml version="1.0"?>
<package format="2">
  <name>ruvu_laser_reflector_filter</name>
  <version>0.0.0</version>
  <description>A package to filter laser data based on intensities.</description>

  <maintainer email="rokus@ruvu.nl">Rokus Ottervanger</maintainer>

  <license>TODO</license>

  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>ruvu_mcl_msgs</depend>

  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>

  <test_depend>ruvu_lint</test_depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
