<?xml version="1.0"?>
<package format="2">
  <name>ruvu_mcl</name>
  <version>0.0.0</version>
  <description>The ruvu_mcl package</description>

  <maintainer email="ramon@todo.todo">ramon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ruvu_lint</test_depend>
</package>
