<?xml version="1.0"?>
<!--
Copyright 2021 RUVU Robotics B.V.
-->

<package format="2">
  <name>ruvu_mcl</name>
  <version>0.0.0</version>
  <description>The ruvu_mcl package</description>

  <maintainer email="paul@ruvu.nl">Paul Verhoeckx</maintainer>
  <maintainer email="ramon@ruvu.nl">Ramon Wijnands</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>libgnuplot-iostream-dev</depend>
  <depend>rosbag</depend>
  <depend>roscpp</depend>
  <depend>ruvu_mcl_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <build_depend>libkdtree++-dev</build_depend>

  <exec_depend>graphicsmagick</exec_depend>

  <test_depend>benchmark</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>ruvu_lint</test_depend>
</package>
