<?xml version="1.0"?>
<package format="2">
  <name>ruvu_mcl_landmark_server</name>
  <version>0.0.0</version>
  <description>The ruvu_mcl_landmark_server package</description>

  <maintainer email="ramon@todo.todo">ramon</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>ruvu_mcl_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <build_depend>nlohmann-json-dev</build_depend>
</package>
