<?xml version="1.0"?>
<!--
Copyright 2021 RUVU Robotics B.V.
-->

<package format="2">
  <name>ruvu_mcl_landmark_server</name>
  <version>0.0.0</version>
  <description>The ruvu_mcl_landmark_server package</description>

  <maintainer email="paul@ruvu.nl">Paul Verhoeckx</maintainer>
  <maintainer email="ramon@ruvu.nl">Ramon Wijnands</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>interactive_markers</depend>
  <depend>roscpp</depend>
  <depend>ruvu_lint</depend>
  <depend>ruvu_mcl_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>


  <build_depend>nlohmann-json-dev</build_depend>
</package>
